Add style for page

--- a/index.html
+++ b/index.html
@@ -3,45 +3,33 @@
     <head>
         <meta charset="utf-8">
         <title>Project 1</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div class="container">
             <div class="wrapper">
-                <h1>In the Air Tonight</h1>
-                <h3>Phil Collins</h3>
-                <p>I can feel it coming in the air tonight, oh lord<br>
-                    And I've been waiting for this moment, for all my life, oh lord<br>
-                    Can you feel it coming in the air tonight, oh lord, oh lord<br>
-                    Well, if you told me you were drowning<br>
-                    I would not lend a hand<br>
-                    I've seen your face before my friend<br>
-                    But I don't know if you know who I am<br>
-                    Well, I was there and I saw what you did<br>
-                    I saw it with my own two eyes<br>
-                    So you can wipe off that grin, I know where you've been<br>
-                    It's all been a pack of lies<br>
-                    And I can feel it coming in the air tonight, oh lord<br>
-                    Well I've been waiting for this moment for all my life, oh lord<br>
-                    I can feel it coming in the air tonight, oh lord<br>
-                    Well I've been waiting for this moment for all my life, oh lord, oh lord<br>
-                    Well I remember, I remember don't worry<br>
-                    How could I ever forget<br>
-                    It's the first time, the last time we ever met<br>
-                    But I know the reason why you keep this silence up<br>
-                    No you don't fool me<br>
-                    The hurt doesn't show, but the pain still grows<br>
-                    It's no stranger to you and me<br>
-                    I can feel it coming in the air tonight, oh lord<br>
-                    Well I've been waiting for this moment for all my life, oh lord<br>
-                    I can feel it in the air tonight, oh lord, oh lord<br>
-                    Well I've been waiting for this moment for all my life, oh lord<br>
-                    I can feel it coming in the air tonight, oh lord<br>
-                    And I've been waiting for this moment for all my life, oh lord<br>
-                    I can feel it in the air tonight, oh lord, oh lord<br>
-                    Well I've been waiting for this moment for all my life, oh lord, oh lord<br>
-                    I can feel it in the air tonight, oh lord, oh lord<br>
-                    Well I've been waiting for this moment for all my life, oh lord, oh lord<br>
+                <h1>Do krytyków</h1>
+                <h3>Julian Tuwim</h3>
+                <p>A w maju
+                    Zwy­kłem jeź­dzić, sza­now­ni pa­no­wie,<br>
+                    Na przed­niej plat­for­mie tram­wa­ju!<br>
+                    Mia­sto na wskroś mnie prze­szy­wa!<br>
+                    Co się tam dzie­je w mej gło­wie:<br>
+                    Pędy, za­pę­dy, ognie, ogni­wa,<br>
+                    We­so­ło w czu­bie i w pię­tach,<br>
+                    A naj­we­se­lej na skrę­tach!<br>
+                    Na skrę­tach - ko­li­ście<br>
+                    Za­gar­niam za­chwy­tem ra­mie­nia,<br>
+                    A drze­wa w po­ry­wie na­tchnie­nia<br>
+                    Sza­le­ją wio­sen­ną wo­nią,<br>
+                    Z ra­do­ści pęka pą­ko­wie,<br>
+                    Uli­ce na alarm dzwo­nią,<br>
+                    Maju, maju! - -<br>
+                    Tak to jadę na przed­niej plat­for­mie tram­wa­ju,<br>
+                    Wiel­ce sza­now­ni pa­no­wie!<br>
                 </p>
             </div>
         </div>
