--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -31,6 +32,9 @@
                     Tak to jadę na przed­niej plat­for­mie tram­wa­ju,<br>
                     Wiel­ce sza­now­ni pa­no­wie!<br>
                 </p>
+                <div class="icon">
+                    <p><i class="fas fa-pen-nib"></i></p>
+                </div>
             </div>
         </div>
     </body>
