Add style for icon

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     Wiel­ce sza­now­ni pa­no­wie!<br>
                 </p>
                 <div class="icon">
-                    <p><i class="fas fa-pen-nib"></i></p>
+                    <i class="fas fa-pen-nib"></i>
                 </div>
             </div>
         </div>
