--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container">
             <div class="wrapper">
-                <h1>Do krytyków</h1>
+                <h1 class="dsd">Do krytyków</h1>
                 <h3>Julian Tuwim</h3>
                 <p>A w maju
                     Zwy­kłem jeź­dzić, sza­now­ni pa­no­wie,<br>
