Update content of index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="wrapper">
                 <h1>Do krytyków</h1>
-                <h3>Julian Tuwim</h3>
+                <h3>Julian </h3>
                 <p>A w maju
                     Zwy­kłem jeź­dzić, sza­now­ni pa­no­wie,<br>
                     Na przed­niej plat­for­mie tram­wa­ju!<br>
