Add class for body

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body>
+    <body class="fdsf">
         <div class="container">
             <div class="wrapper">
                 <h1 class="dsd">Do krytyków</h1>
