--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="wrapper">
                 <h1 class="dsd">Do krytyków</h1>
                 <h3>Julian Tuwim</h3>
-                <p>A w maju
+                <p class="fsdf">A w maju
                     Zwy­kłem jeź­dzić, sza­now­ni pa­no­wie,<br>
                     Na przed­niej plat­for­mie tram­wa­ju!<br>
                     Mia­sto na wskroś mnie prze­szy­wa!<br>
