--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Project 1</title>
+        <title>Project</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body>
+    <body class="fdsf">
         <div class="container">
             <div class="wrapper">
-                <h1>Do krytyków</h1>
-                <h3>Julian </h3>
-                <p>A w maju
+                <h1 class="dsd">Do krytyków</h1>
+                <h3>Julian Tuwim</h3>
+                <p class="fsdfgit status">A w maju
                     Zwy­kłem jeź­dzić, sza­now­ni pa­no­wie,<br>
                     Na przed­niej plat­for­mie tram­wa­ju!<br>
                     Mia­sto na wskroś mnie prze­szy­wa!<br>
@@ -22,7 +22,7 @@
                     Pędy, za­pę­dy, ognie, ogni­wa,<br>
                     We­so­ło w czu­bie i w pię­tach,<br>
                     A naj­we­se­lej na skrę­tach!<br>
-                    Na skrę­tach - ko­li­ście<br>
+                    Na skrę­tach - ko­cie<br>
                     Za­gar­niam za­chwy­tem ra­mie­nia,<br>
                     A drze­wa w po­ry­wie na­tchnie­nia<br>
                     Sza­le­ją wio­sen­ną wo­nią,<br>
@@ -37,5 +37,6 @@
                 </div>
             </div>
         </div>
+        <p>asas ddssa dsad </p>
     </body>
 </html>        
